BANG-1351: Get the Mapping Rules page to load and create rules.
