# internal/server/openapi.go
@@ -540,7 +540,7 @@ func getFieldName(f reflect.StructField, parent reflect.Type) string {
 func validateFieldName(name string) {
 	// temporary allow list
 	switch name {
-	// Allow field names from the group_mapping model that don't follow standard Go naming conventions.
+	// Allow field names from the mapping_rule model that don't follow standard Go naming conventions.
 	case "unique_id", "rule_name", "source_group_regex", "destination_type",
 		"name_template", "namespace_template", "role_template":
 		return
